# newco-assurance

./: .gitignore  BUSINESS_CASES.md  CODEOWNERS  CUSTOMER_VALIDATION.md  DEMO_SCRIPT.md  LICENSE  PILOT_OFFER.md  PRODUCT.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  index.html  samples.js  scanner-core.js  styles.css
evaluations/: assurance-workflow-v1.json
scripts/: browser_qa.py  evaluate_release.py  langsmith_release.py  validate-static.mjs
src/newco_assurance/: __init__.py  evaluation.py  isolated_runner.py  schema.py  workflow.py
tests/: scanner-core.test.mjs  test_workflow.py
